<resources>
    <string name="app_name">QTP</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scanner">Scanner</string>
    <string name="title_activity_login">Enter password</string>
    <string name="title_activity_base">QTP</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hint_user_email">Your email</string>
    <string name="hint_user_password">Your password</string>
    <string name="log_in">Log in</string>
    <string name="link_forgot_password">Forgot Password?</string>
    <string name="link_account_sign_up">Don`t have an account? Sign up</string>
    <string name="title_activity_create_account">Create new account</string>
    <string name="hint_user_name">Your name</string>
    <string name="hint_user_mobile_no">Your mobile no.</string>
    <string name="sign_up">Sign up</string>
    <string name="link_account_log_in">Already have an account? Log in</string>
    <string name="link_just_remembered_login">Just remembered? Login</string>
    <string name="reset_password">Reset password</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="title_activity_qrcode_generator">Make Payment</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_secret_mpin">Secret MPIN</string>
    <string name="create_qr_code">Create QR Code</string>
    <string name="content_description_qr_code">QR Code</string>
    <string name="text_code_expiry">Expires in %d seconds</string>
    <string name="text_balance">Balance: Rs. %.2f</string>
    <string name="text_balance_updating">Balance: </string>
    <string name="text_generating_qr_code">Generating QR Code...</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_new_4_digit_mpin">New 4-digit MPIN</string>
    <string name="text_balance_error">Balance could not be updated!</string>
    <string name="error_field_required">Required</string>
    <string name="positive_button_add_amount">Add amount</string>
    <string name="text_transaction_amount">%1$s %2$.2f</string>
    <string name="title_activity_transaction_history">All Transactions</string>
    <string name="title_activity_chat">ChatBot</string>

</resources>
