<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.qtp.authentication.CreateAccountActivity"
    tools:showIn="@layout/activity_create_account">

    <LinearLayout
        android:id="@+id/ll_Create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_rectangle"
            android:drawableLeft="@drawable/ic_person_outline_cyan_500_24dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_person_outline_cyan_500_24dp"
            android:ems="10"
            android:hint="@string/hint_user_name"
            android:inputType="textPersonName"
            android:padding="5dp" />

        <EditText
            android:id="@+id/etMobile"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_rectangle"
            android:drawableLeft="@drawable/ic_phone_cyan_500_24dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_phone_cyan_500_24dp"
            android:ems="10"
            android:hint="@string/hint_user_mobile_no"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="5dp" />


        <EditText
            android:id="@+id/etNewEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_rectangle"
            android:drawableLeft="@drawable/ic_email_cyan_500_24dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_email_cyan_500_24dp"
            android:ems="10"
            android:hint="@string/hint_user_email"
            android:inputType="textEmailAddress"
            android:padding="5dp" />

        <EditText
            android:id="@+id/etNewMPIN"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_rectangle"
            android:drawableLeft="@drawable/ic_lock_outline_cyan_500_24dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_lock_outline_cyan_500_24dp"
            android:ems="10"
            android:hint="@string/hint_new_4_digit_mpin"
            android:inputType="numberPassword"
            android:padding="5dp" />

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="35dp"
            android:background="@drawable/round_rectangle"
            android:drawableLeft="@drawable/ic_lock_outline_cyan_500_24dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_lock_outline_cyan_500_24dp"
            android:ems="10"
            android:hint="@string/hint_new_password"
            android:inputType="textPassword"
            android:padding="5dp" />

        <Button
            android:id="@+id/bCreate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_button"
            android:text="@string/sign_up"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/tvLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/link_account_log_in"
            android:textColor="#0000ff"
            android:textSize="16sp"
            android:textStyle="italic" />
    </LinearLayout>
</ScrollView>
