<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.qtp.QRCodeGeneratorActivity"
    tools:showIn="@layout/activity_qrcode_generator">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llAccountDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/tvBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:text="@string/text_balance"
                android:textColor="#c51162" />

            <EditText
                android:id="@+id/etAmount"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_rectangle"
                android:drawableLeft="@drawable/ic_attach_money_cyan_500_24dp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_attach_money_cyan_500_24dp"
                android:ems="10"
                android:hint="@string/hint_amount"
                android:inputType="numberDecimal"
                android:padding="5dp" />

            <EditText
                android:id="@+id/etMPIN"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_rectangle"
                android:drawableLeft="@drawable/ic_lock_outline_cyan_500_24dp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_lock_outline_cyan_500_24dp"
                android:ems="10"
                android:hint="@string/hint_secret_mpin"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:padding="5dp" />

            <Button
                android:id="@+id/bCreateQrCode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_button"
                android:text="@string/create_qr_code"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llQRCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llAccountDetails"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/ivQRCode"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:contentDescription="@string/content_description_qr_code" />

            <TextView
                android:id="@+id/tvExpiry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_generating_qr_code"
                android:textColor="#FF0000" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>
