<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.qtp.authentication.LoginActivity"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:id="@+id/ll_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_rectangle"
            android:drawableLeft="@drawable/ic_email_cyan_500_24dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_email_cyan_500_24dp"
            android:ems="10"
            android:hint="@string/hint_user_email"
            android:inputType="textEmailAddress"
            android:padding="5dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="35dp"
            android:background="@drawable/round_rectangle"
            android:drawableLeft="@drawable/ic_lock_outline_cyan_500_24dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_lock_outline_cyan_500_24dp"
            android:ems="10"
            android:hint="@string/hint_user_password"
            android:inputType="textPassword"
            android:padding="5dp" />

        <Button
            android:id="@+id/bLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_button"
            android:text="@string/log_in"
            android:textColor="#ffffff" />



        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/link_account_sign_up"
            android:textColor="#0000ff"
            android:textSize="16sp"
            android:textStyle="italic" />
    </LinearLayout>
</ScrollView>
