<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.qtp.authentication.ResetPasswordActivity">

    <LinearLayout
        android:id="@+id/ll_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etResetEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_rectangle"
            android:drawableLeft="@drawable/ic_email_cyan_500_24dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_email_cyan_500_24dp"
            android:ems="10"
            android:hint="@string/hint_user_email"
            android:inputType="textEmailAddress"
            android:padding="5dp" />

        <Button
            android:id="@+id/bReset"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_button"
            android:text="@string/reset_password"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/tvRemembered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/link_just_remembered_login"
            android:textColor="#0000ff"
            android:textSize="16sp"
            android:textStyle="italic" />
    </LinearLayout>
</ScrollView>
